Fixed a few bugs, now works in DMs
!pun doesn't crash anymore
DMs work
Seperate CleverBots for each Server/DM
fixed typos
Captures negative numbers
Better roll error handling
!flip 0 doesn't work anymore
some other stuff I probably forgot

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "prefix": "~",
+  "prefix": "!",
   "maxDiceTimes" : 10,
   "maxDiceSides" : 256,
   "maxModifier"  : 1000,
@@ -14,5 +14,8 @@
     "kys": true,
     "wakeup": true,
     "familyFriendly": true
+  },
+  "hidden": {
+    "cleverBot": null
   }
 }
