--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/AtlasTheBot/RobotOtter-Discord#readme",
   "dependencies": {
-    "discord.js": "^9.3.0"
+    "discord.js": "^11.0.0",
+    "node-opus": "^0.2.4",
+    "uws": "^0.12.0"
   }
 }
